--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <body>
 
 <h1>Rachel's Website</h1>
+  <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=v2%3A2PACX-1vTXgwhasQsP0EmWcyXovJA4FcC3tukSJcH_6WVS-C562TZQoeX9d4WyNSUSH75IRnBrh50jpnOIQTUf&font=Default&lang=en&initial_zoom=2&width=100%25&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+  
 <p>This is a test.</p>
 
 </body>
