--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <p style="color: chartreuse">
   paragraph style test in chartreuse
 </p>
+  <p style="color: sienna">
+  </p>
 <h1>Rachel's Website</h1>
 <p>This is a test.</p>
 
