--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   paragraph style test in chartreuse
 </p>
   <p style="color: sienna">
+    test of the second color
   </p>
 <h1>Rachel's Website</h1>
 <p>This is a test.</p>
