--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
-    <title>My page's title</title>
-    
+       <title>My page's title</title>
+    <style>
+      h1 {color:blue}
+      </style>
+    <h1>Rachel's Website</h1>  
   </head>
-<body>
+
+  <body>
 
   <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=v2%3A2PACX-1vTXgwhasQsP0EmWcyXovJA4FcC3tukSJcH_6WVS-C562TZQoeX9d4WyNSUSH75IRnBrh50jpnOIQTUf&font=Default&lang=en&initial_zoom=2&width=100%25&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
   <p style="color: chartreuse">
@@ -14,7 +17,7 @@
   <p style="color: sienna">
     test of the second color
   </p>
-<h1>Rachel's Website</h1>
+
 <p>This is a test.</p>
 
 </body>
