--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
        <title>My page's title</title>
-
+<link rel="stylesheet" href="style.css"/>
     <h1>Rachel's Website</h1>  
   </head>
 
